Replaced  class Reachability and fixed bug

--- a/WeatherApp/Info.plist
+++ b/WeatherApp/Info.plist
@@ -47,5 +47,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Allow to access this device&apos;s location?</string>
 </dict>
 </plist>
